media screen for logo setup added

--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,9 @@
     transition: color 0.3s ease;
   }
   
+  @media (max-width:900px){
+    .main-logo{
+      /* display: none; */
+      width:100px;
+    }
+  }
